--- a/styles/github-markdown-css-dark.module.css
+++ b/styles/github-markdown-css-dark.module.css
@@ -4,9 +4,9 @@
   -webkit-text-size-adjust: 100%;
   margin: 0;
   color: #c9d1d9;
-	background-color: var(--colors-bgMd);
+  background-color: var(--colors-background);
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-  font-size: 16px;
+  font-size: clamp(1rem, 3vw, 1.2rem);
   line-height: 1.5;
   word-wrap: break-word;
   transition: color 150ms ease 0s, background 350ms ease 0s !important;
@@ -297,8 +297,10 @@
 
 .markdown-body blockquote {
   margin: 0;
-  padding: 0 1em;
+  padding: 1em;
   color: #8b949e;
+  background: var(--colors-mediumBackground);
+  transition: var(--transitions-transitonTheme), border .3s ease;
   border-left: .25em solid #30363d;
 }
 
@@ -849,7 +851,8 @@
   overflow: auto;
   font-size: 1em;
   line-height: 1.45;
-  background-color: #1B1B1E;
+  transition: var(--transitions-transitonTheme);
+  background-color: var(--colors-mediumBackground);
   border-radius: 6px;
 }
 
